# N9010A_Controller

./: .gitignore  README.md  pyproject.toml
n9010a_controller/: __main__.py  n9010a_api.py  socket_client.py  to_exe.py  utils.py
n9010a_controller/pyqt_client/: N9010A.ui  _widgets.py  backend.py
