[tool.poetry]
name = "n9010a-controller"
version = "0.1.0"
description = ""
authors = ["CrinitusFeles <crinitusfeles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.6.1"
loguru = "^0.7.2"
event = {git = "https://github.com/CrinitusFeles/Event.git"}
python-tcp = {git = "https://github.com/CrinitusFeles/PythonTCP.git"}
qasync = "^0.27.1"
numpy = "^2.2.3"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
